--- a/templates/articles/article-edit.html.twig
+++ b/templates/articles/article-edit.html.twig
@@ -1,13 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-
-
+<link rel="stylesheet" href="/styles/articles-custom.css" crossorigin="anonymous" />
 <div class="article-container">
 
-
-    <h1>Create a new article</h1>
+    <h1>Modifier Article</h1>
 
     {% if error %}
     <div class="alert alert-danger">
@@ -15,35 +12,37 @@
     </div>
     {% endif %}
 
-    <form method="post" action="/article/create">
+    <form method="post" action="/article/{{ article.id }}/modifier">
         <div class="form-block">
             <label for="title">Title:</label>
-            <input class="form-input" type="text" id="title" name="title" value="{{ title }}" required autofocus>
+            <input class="form-input" type="text" id="title" name="title" value="{{ article.title }}" required
+                autofocus>
         </div>
         <div class="form-block">
             <label for="markdown-editor">Content:</label>
-            <textarea class="form-input" id="markdown-editor" name="content_text" required></textarea>
+            <textarea class="form-input" id="markdown-editor" name="content_text"
+                required>{{ markdownContent }}</textarea>
         </div>
         <div class="form-block">
             <label for="tags">Tags:</label>
             <select class="form-input" id="tags" name="tags[]" multiple required>
                 {% for tag in tags %}
-                <option value="{{ tag.id }}">{{ tag.mot }}</option>
+                <option value="{{ tag.id }}" {% if article.tags.contains(tag) %} selected {% endif %}>{{ tag.mot }}
+                </option>
                 {% endfor %}
             </select>
         </div>
         <div>
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <button class="btn btn-primary" type="submit">Save changes</button>
         </div>
-        <textarea name="content" hidden id="markdown-html" id="" cols="30" rows="10"></textarea>
+        <textarea name="content" hidden id="markdown-html" id="" cols="30" rows="10">{{ article.content }}</textarea>
     </form>
 
     <div>
         <h2>Aperçu</h2>
-        <div id="markdown-preview"></div>
+        <div id="markdown-preview">{{ article.content|raw }}</div>
     </div>
 </div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.0/marked.min.js"></script>
 <script>
     const editor = document.getElementById('markdown-editor');
@@ -56,8 +55,6 @@
         preview.innerHTML = html;
         content.innerHTML = html;
     });
-    $(document).ready(function () {
-        $('#tags').select2();
-    });
 </script>
+
 {% endblock %}
