--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,11 +36,14 @@
                 <li><a href="/articles">Articles</a></li>
                 {% if app.request.attributes.get('user') %}
                 <li><a href="/article/create">Create Article</a></li>
+                <li><a href="/profile">Profile</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
+
                 {% else %}
                 <li><a href="/auth/login">Login</a></li>
                 <li><a href="/auth/register">Register</a></li>
                 {% endif %}
+
             </ul>
         </nav>
         {% block body %}{% endblock %}
