--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,6 +11,9 @@ body {
   box-sizing: border-box;
 }
 
+.container {
+  padding: 30px;
+}
 .auth-container {
   display: flex;
   justify-content: center;
@@ -147,4 +150,103 @@ body {
 }
 .mt {
   margin-top: 10px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  border-bottom: 1px #29292c45 solid;
+}
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul li {
+  list-style: none;
+  margin: 0 10px;
+}
+.menu-logo a {
+  font-size: 30px;
+  font-weight: bolder;
+  color: #29292c;
+  text-decoration: none;
+  font-family: "Castoro Titling", sans-serif;
+}
+
+.menu-items a {
+  color: #29292c;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.menu-items a:hover {
+  color: #29292ce0;
+}
+.menu-items img {
+  width: 100%;
+  height: 100%;
+}
+
+.menu-profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  position: relative;
+  overflow: hidden;
+  object-fit: cover;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+}
+
+.menu-items {
+  display: flex;
+  align-items: center;
+}
+
+.menu-ecrire {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border: #1117271f 2px solid;
+}
+
+.articles-list-header {
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Castoro Titling", sans-serif;
+  border-bottom: 1px #29292c45 solid;
+  padding-bottom: 20px;
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-form {
+  display: flex;
+}
+.search-form input {
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 40px;
+}
+.search-form button {
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 40px;
+  font-family: inherit;
+}
+
+.article-detail {
+  display: flex;
+  align-items: center;
 }
