--- a/templates/articles/articles-list.html.twig
+++ b/templates/articles/articles-list.html.twig
@@ -5,33 +5,40 @@
 {% block body %}
 <link rel="stylesheet" href="/styles/articles-custom.css" crossorigin="anonymous" />
 
-<h1>Article List</h1>
+<div class="articles-list-header">
+    <h1>Articles</h1>
 
-<form method="get" action="{{ path('list_articles') }}">
-    <label for="q">Search:</label>
-    <input type="text" name="q" value="{{ app.request.query.get('q') }}">
-    <button type="submit">Search</button>
-</form>
+    <form class="search-form" method="get" action="{{ path('list_articles') }}">
+        <input class="form-input" type="text" name="q" value="{{ app.request.query.get('q') }}">
+        <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+    </form>
+</div>
 
-<hr>
 
 {% for article in articles %}
-<div class="article">
-    <div> 
-        <img src="{{ article.image }}" style="width:100px;heigth:100px;" alt="image" onerror="this.src='https://www.freeiconspng.com/uploads/no-image-icon-15.png'">
+<div class="article-container">
+    <div class="article-author">
+        <p>{{ article.getAuthor().getNom() }}</p>
+        <p>{{ article.getAuthor().getPrenom() }}</p>
     </div>
-    <h2>{{ article.title }}</h2>
-    <p>{{ article.content|raw }}</p>
-    <p>{{ article.getAuthor().getNom() }}</p>
-    <p>{{ article.getAuthor().getPrenom() }}</p>
-    {% for comment in article.getComment() %}
-    <p>{{comment.getContent()}} by {{comment.getAuthor().getNom()}}</p>
-    {% endfor %}
-    <a href="/articles/{{ article.id }}">View</a>
+    <div class="article-detail">
+
+        <div class="article-info">
+            <div class="article-title">
+                <h2>{{ article.title }}</h2>
+            </div>
+            <div class="article-description">
+                <p>{{ article.content }}</p>
+            </div>
+        </div>
+        <div class="article-image">
+            <img src="{{ article.image }}" style="width:100px;heigth:100px;" alt="image"
+                onerror="this.src='https://www.freeiconspng.com/uploads/no-image-icon-15.png'">
+        </div>
+    </div>
 </div>
 {% endfor %}
 
-<hr>
 
 {{ knp_pagination_render(articles) }}
 
