--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -248,5 +248,151 @@ nav ul li {
 
 .article-detail {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  max-width: 800px;
+}
+
+.article-author {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.article-container {
+  border-bottom: 1px #29292c45 solid;
+}
+
+.article-author p {
+  font-size: 14px;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.article-author-photo {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  overflow: hidden;
+  margin-right: 10px;
+}
+.article-author-photo img {
+  height: 100%;
+  width: 100%;
+}
+
+.article-author-info span {
+  font-size: 12px;
+  color: #717178;
+  font-weight: 500;
+}
+
+.article-info {
+  margin-right: 20px;
+}
+a {
+  text-decoration: none;
+  color: #29292c;
+}
+
+.article-title {
+  font-size: 18px;
+}
+
+.article-content {
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 25px;
+  margin: 20px 0;
+  font-family: inherit;
+  font-family: "Roboto Slab", serif;
+  color: #29292ca3;
+}
+
+.article-image {
+  height: 160px;
+  width: 600px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.article-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.article-detail .article-image img {
+  filter: grayscale(100%);
+  transition: filter 0.5s ease-in-out;
+}
+
+.article-detail:hover .article-image img {
+  filter: grayscale(0%);
+}
+
+.article-detail-page-container {
+  padding: 40px;
+}
+
+.article-detail-page-container .article-author {
+  margin-bottom: 30px;
+}
+.article-detail-page-container .article-detail-image {
+  height: 400px;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 30px;
+  border-radius: 10px;
+}
+
+.article-detail-page-container .article-detail-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease-in-out;
+}
+.article-detail-page-container .article-detail-image img:hover {
+  filter: grayscale(0%);
+}
+.article-detail-page-container .article-title h1 {
+  width: 80%;
+  margin: 40px 0;
+}
+
+.article-detail-page-container .article-content {
+  color: #000000;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.article-detail-page-container .article-content p {
+  width: 90%;
+}
+
+.article-comment {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 30px 0;
+}
+
+.article-comments-container .article-author {
+  margin: 10px 0;
+  padding-bottom: 10px;
+}
+
+.article-comments-container .comment-content {
+  font-size: 14px;
+}
+
+.article-comments-container .comment {
+  margin-bottom: 50px;
+  padding-bottom: 50px;
+  border-bottom: 1px #29292c45 solid;
 }
